# all_messages

./: Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
all_messages/accounts/: apps.py  forms.py  models.py  urls.py  views.py
all_messages/accounts/templates/: login.html  logout.html  register.html  settings.html  start_page.html
all_messages/api_controller/: controller.py
all_messages/chats/: apps.py  consumer.py  models.py  routing.py  urls.py  views.py
all_messages/chats/templates/: chats.html
all_messages/contacts/: apps.py  models.py  urls.py  views.py
all_messages/contacts/templates/: contacts.html
all_messages/static/myjs/: chats.js  contacts.js  header_fill.js  settings.js
all_messages/templates/: header.html  intro.html
all_messages/tests/: test_models.py  test_response.py  test_view.py
config/: asgi.py  settings.py  urls.py
nginx/: nginx.conf
